// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post navigation teaser should render all that is required 1`] = `
<nav
  className="post navigation teaser"
>
  <aside
    className="previous"
  >
     
    <a
      className="nav-link"
      href="/previous"
      title="Previous"
    >
      <h1>
        Previous
      </h1>
      <div
        className="body"
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "Excerpt",
            }
          }
        />
      </div>
      <div
        className="metadata"
      >
        posted on
         
        <time
          dateTime={"2018-04-01T00:00:00.000Z"}
        >
          Sunday, 1 April 2018
        </time>
         
        <span>
          by Clarice Bouwer
        </span>
         
        <span>
          
        </span>
      </div>
    </a>
     
    <div
      className="tags"
    >
       
      <a
        className="tag"
        href="/tag/adams/"
        title="Adams"
      >
        adams
      </a>
       
       
      <a
        className="tag"
        href="/tag/douglas/"
        title="Douglas"
      >
        douglas
      </a>
       
    </div>
  </aside>
  <aside
    className="next"
  >
     
    <a
      className="nav-link"
      href="/next"
      title="Next"
    >
      <h1>
        Next
      </h1>
      <div
        className="body"
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "Excerpt",
            }
          }
        />
      </div>
      <div
        className="metadata"
      >
        posted on
         
        <time
          dateTime={"2018-04-01T00:00:00.000Z"}
        >
          Sunday, 1 April 2018
        </time>
         
        <span>
          by Clarice Bouwer
        </span>
         
        <span>
          
        </span>
      </div>
    </a>
     
    <div
      className="tags"
    >
       
      <a
        className="tag"
        href="/tag/adams/"
        title="Adams"
      >
        adams
      </a>
       
       
      <a
        className="tag"
        href="/tag/douglas/"
        title="Douglas"
      >
        douglas
      </a>
       
    </div>
  </aside>
</nav>
`;

exports[`Post navigation teaser should render everything else 1`] = `
<nav
  className="post navigation teaser"
>
  <aside
    className="previous"
  >
     
    <a
      className="nav-link"
      href="/previous"
      title="Don't panic."
    >
      <h1>
        Don't panic.
      </h1>
      <div
        className="body"
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "Earthman Arthur Dent is rescued by his friend, Ford Prefect—an...",
            }
          }
        />
      </div>
      <div
        className="metadata"
      >
        posted on
         
        <time
          dateTime={"2018-04-01T00:00:00.000Z"}
        >
          Sunday, 1 April 2018
        </time>
         
        <span>
          by Pixie
        </span>
         
        <span>
          
        </span>
      </div>
    </a>
     
    <div
      className="tags"
    >
       
      <a
        className="tag"
        href="/tag/adams/"
        title="Adams"
      >
        adams
      </a>
       
       
      <a
        className="tag"
        href="/tag/douglas/"
        title="Douglas"
      >
        douglas
      </a>
       
    </div>
  </aside>
  <aside
    className="next"
  >
     
    <a
      className="nav-link"
      href="/next"
      title="Come to the dark side."
    >
      <h1>
        Come to the dark side.
      </h1>
      <div
        className="body"
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "Luke Skywalker's peaceful and solitary existence gets upended when he...",
            }
          }
        />
      </div>
      <div
        className="metadata"
      >
        posted on
         
        <time
          dateTime={"2019-04-01T00:00:00.000Z"}
        >
          Monday, 1 April 2019
        </time>
         
        <span>
          by Elby
        </span>
         
        <span>
          
        </span>
      </div>
    </a>
     
    <div
      className="tags"
    >
       
      <a
        className="tag"
        href="/tag/star/"
        title="star"
      >
        star
      </a>
       
       
      <a
        className="tag"
        href="/tag/wars/"
        title="wars"
      >
        wars
      </a>
       
    </div>
  </aside>
</nav>
`;
